# pyra

./: .gitignore  README.md  install.sh  netlify.toml  package-lock.json  pyproject.toml  run-headless-helios-thread.py  run-pyra-core.py  run.py  run_headless_helios_thread.py  run_headless_upload_thread.py  run_headless_vbdsd_thread.py  run_pyra_core.py  todos.md
.github/ISSUE_TEMPLATE/: BUG-REPORT-NEW.yml  BUG-REPORT.yml  FEATURE-REQUEST.yml  FORM-TEST.yml  bug_form_test.yaml  bug_report.md  bug_report_legacy.md  bug_report_new.yml  config.yml  feature_request.md
.github/workflows/: build-on-prerelease.yaml  build-on-prerelease.yml  build-on-release.yaml  build-on-release.yml  render-paper-draft.yml  test-on-main.yml  test-on-push-to-main.yml  test-python-code.yaml  test-python-codebase-on-main.yml  test-typescript-code.yaml  test-typescript-codebase-on-main.yml
config/: aemet_enclosure.config.default.json  coccon_spain_enclosure.config.default.json  config-asfd.json  config.default.json  helios.config.default.json  parameters.default.json  setup.default.json  thingsboard.config.default.json  thingsboard.default.json  tum-plc.default.json  tum_enclosure.config.default.json  tum_plc.config.default.json  tum_plc.default.json  upload.config.default.json  vbdsd.config.default.json  vbdsd.default.json
docs/: architecture.excalidraw  pyra-ui-20220624.excalidraw  pyra-ui-control-tab.excalidraw  pyra-ui.excalidraw
joss/: paper.bib  paper.md
scripts/: build_pdoc3_md.sh  check_static_types.sh  find_and_kill_opus.py  get_upload_dir_checksum.py  migrate_vbdsd_images.py  play.py  read_plc_state.py  remove_helios_images.py  remove_vbdsd_images.py  run_headless_aemet_enclosure_thread.py.py  run_headless_helios_thread.py  run_headless_tum_enclosure_thread.py  run_headless_upload_thread.py  run_type_analysis.sh  sparsify_helios_images.py  sparsify_vbdsd_images.py  sync_version_numbers.py  take_exposure_image_series.py  update_api_reference.py
scripts/helios/: evaluate_helios_camera.py  find_helios_camera.py
scripts/helios-setup/: evaluate_helios_camera.py  find_helios_camera.py
tests/: __init__.py  fixtures.py  test_cli.py  test_cli_config.py  test_cli_core.py  test_config_cli.py  test_cover.py  test_emailing.py  test_enclosure_control.py  test_enclosure_reset_check.py  test_ip_connections.py  test_opus_measurement.py  test_process_status.py  test_read_camtracker_logs.py  test_start_measurements.py  test_static_types.py  test_stop_measurements.py  test_sun_tracking.py  test_vbdsd.py
tests/cli/: test_cli_config.py  test_cli_core.py
tests/core/: test_dde_interface.py  test_emailing.py  test_ip_connections.py  test_process_status.py  test_start_measurements.py  test_stop_measurements.py  test_sun_tracking.py
tests/environments/: opus-mock-server.py
tests/helios/: test_helios.py  test_take_helios_picture.py
tests/integration/: test_aemet_enclosure_connection.py  test_camtracker_connection.py  test_config.py  test_emailing.py  test_opus_connection.py  test_thingsboard_connection.py  test_tum_enclosure_connection.py  test_upload.py  test_uploading.py
tests/integrity/: test_default_config.py
tests/plc/: basic_connection_tests.py  test_camera_power_switch.py  test_enclosure_control.py  test_enclosure_reset_check.py
tests/repository/: README.md  test_api_reference_state.py  test_default_config.py  test_static_types.py  test_version_numbers.py
tests/utils/: test_astronomy.py  test_ring_list.py
tests/vbdsd/: test_take_vbdsd_picture.py
website/: docusaurus.config.js  package.json  tailwind.config.js
website/docs/: abbreviations.mdx  contact.mdx  index.mdx  introduction.md  styles.md  styles.mdx
website/docs/developer-guide/: _category_.json  architecture.mdx  contributing.mdx  external-interfaces.mdx  internal-interfaces.mdx  repository-organisation.mdx  repository-testing-and-ci.mdx  roadmap.mdx  running-pyra-manually.mdx  some.mdx  testing-and-ci.mdx
website/docs/user-guide/: _category_.json  cli.mdx  community.mdx  functionality.mdx  setup.mdx  some.mdx  some2.mdx  tum-plc-and-helios.mdx  upload.mdx  usage.mdx
website/src/components/: abbreviation.tsx  github-label.tsx  track-on-github.tsx
website/src/css/: admonitions.css  custom.css  markdown.css  navigation.css  tailwind.css
website/src/pages/: index.tsx
