[project]
name = "pyra"
version = "4.1.3"
description = "operate an EM27 station autonomously"
authors = [
    { name = "Moritz Makowski", email = "moritz.makowski@tum.de" },
    { name = "Patrick Aigner", email = "patrick.aigner@tum.de" },
    { name = "Andreas Luther", email = "andreas.luther@tum.de" },
]
dependencies = [
    "numpy==1.26.3",
    "click>=8.1.7",
    "python-snap7==1.3",
    "jdcal==1.4.1",
    "tqdm>=4.66.5",
    "colorama>=0.4.6",
    "deepdiff>=8.0.1",
    "skyfield==1.46",
    "opencv-python==4.9.0.80",
    "pywin32==306; sys_platform == \"win32\"",
    "circadian-scp-upload>=0.5.0",
    "setuptools>=75.1.0",
    "pydantic>=2.9.2",
    "filelock>=3.16.1",
    "psutil>=6.0.0",
]
requires-python = "==3.10.*"
readme = "README.md"
license = { text = "GPL-3" }

[project.optional-dependencies]
dev = [
    "pytest>=7.4.4",
    "pytest-cov>=4.1.0",
    "lazydocs>=0.4.8",
    "yapf>=0.40.2",
    "mypy>=1.8.0",
    "types-pywin32>=306.0.0.20240106",
    "types-psutil>=5.9.5.20240106",
    "types-paramiko>=3.4.0.20240106",
    "types-invoke>=2.0.0.10",
    "pytest-order>=1.2.1",
]

[tool.yapf]
based_on_style = "facebook"
coalesce_brackets = true
split_before_dict_set_generator = true
each_dict_entry_on_separate_line = false
spaces_around_subscript_colon = true

[tool.mypy]
strict = true
implicit_reexport = true
warn_unused_ignores = false
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "cv2",
    "jdcal",
    "snap7",
    "snap7.*",
    "deepdiff",
    "psutil",
    "skyfield.*",
    "fabric.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
filterwarnings = [
    'ignore:the imp module is deprecated in favour of importlib:DeprecationWarning',
    'ignore:pkg_resources is deprecated as an API:DeprecationWarning',
    'ignore:getargs:DeprecationWarning',
]
markers = [
    "ci: can be run in a CI environment",
    "integration: can only be run on a configured system",
]

[tool.pdm.options]
add = ["--no-self"]
install = ["--no-self"]
remove = ["--no-self"]

[tool.pdm]
distribution = false

[tool.setuptools]
packages = []
