[project]
name = "pyra"
version = "4.1.4"
description = "operate an EM27 station autonomously"
authors = [
    { name = "Moritz Makowski", email = "moritz.makowski@tum.de" },
    { name = "Patrick Aigner", email = "patrick.aigner@tum.de" },
    { name = "Andreas Luther", email = "andreas.luther@tum.de" },
]
dependencies = [
    "numpy==2.2.0",
    "click>=8.1.7",
    "python-snap7==1.3",
    "jdcal==1.4.1",
    "tqdm>=4.67.1",
    "colorama>=0.4.6",
    "deepdiff>=8.0.1",
    "skyfield==1.49",
    "circadian-scp-upload>=0.5.2",
    "setuptools>=75.6.0",
    "pydantic>=2.10.3",
    "filelock>=3.16.1",
    "psutil>=6.1.0",
    "brukeropus>=1.1.0",
    "tum-esm-utils[opus]>=2.5.0",
    "scikit-image>=0.24.0",
    "pillow>=11.0.0",
    "requests>=2.32.3",
]
requires-python = "==3.10.*"
readme = "README.md"
license = { text = "GPL-3" }

[project.optional-dependencies]
dev = [
    "pytest>=7.4.4",
    "pytest-cov>=4.1.0",
    "lazydocs>=0.4.8",
    "mypy>=1.8.0",
    "types-pywin32>=306.0.0.20240106",
    "types-psutil>=5.9.5.20240106",
    "types-paramiko>=3.4.0.20240106",
    "types-invoke>=2.0.0.10",
    "pytest-order>=1.2.1",
    "ruff>=0.8.2",
    "types-requests>=2.32.0.20241016",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
ignore = ["E402", "E741"]
exclude = ["tests/*"]

[tool.mypy]
strict = true
implicit_reexport = true
warn_unused_ignores = false
untyped_calls_exclude = ["skimage"]
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "cv2",
    "jdcal",
    "snap7",
    "snap7.*",
    "deepdiff",
    "psutil",
    "skyfield.*",
    "fabric.*",
    "brukeropus",
    "brukeropus.*",
    "skimage.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
filterwarnings = [
    'ignore:the imp module is deprecated in favour of importlib:DeprecationWarning',
    'ignore:pkg_resources is deprecated as an API:DeprecationWarning',
    'ignore:getargs:DeprecationWarning',
]
markers = [
    "ci: can be run in a CI environment",
    "integration: can only be run on a configured system",
]

[tool.pdm.options]
add = ["--no-self"]
install = ["--no-self"]
remove = ["--no-self"]

[tool.pdm]
distribution = false

[tool.setuptools]
packages = []
