[project]
name = "pyra"
version = "4.2.8"
description = "Automated EM27/SUN Greenhouse Gas Measurements"
authors = [
    { name = "Moritz Makowski", email = "moritz.makowski@tum.de" },
    { name = "Patrick Aigner", email = "patrick.aigner@tum.de" },
    { name = "Andreas Luther", email = "andreas.luther@tum.de" },
    { name = "Friedrich Klappenbach", email = "friedrich.klappenbach@tum.de" },
]
dependencies = [
    "numpy==2.2.5",
    "click==8.1.8",
    "python-snap7==2.0.2",
    "jdcal==1.4.1",
    "tqdm>=4.67.1",
    "colorama>=0.4.6",
    "deepdiff>=8.4.2",
    "skyfield==1.53",
    "circadian-scp-upload>=0.5.2",
    "setuptools>=79.0.0",
    "pydantic==2.11.3",
    "filelock==3.18.0",
    "psutil>=7.0.0",
    "scikit-image==0.25.2",
    "pillow==11.2.1",
    "requests==2.32.5",
    "opencv-python==4.11.0.86",
    "tum-esm-utils[opus]==2.11.3",
]
requires-python = ">=3.10.0"
readme = "README.md"
license = { text = "GPL-3" }

[project.optional-dependencies]
dev = [
    "lazydocs>=0.4.8",
    "mypy>=1.8.0",
    "pytest>=7.4.4",
    "pytest-cov>=4.1.0",
    "pytest-order>=1.2.1",
    "ruff>=0.8.2",
    "types-psutil>=5.9.5.20240106",
    "types-paramiko>=3.4.0.20240106",
    "types-invoke>=2.0.0.10",
    "types-requests>=2.32.0.20241016",
    "pyright>=1.1.408",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
ignore = ["E402", "E741"]
exclude = ["tests/*"]

[tool.mypy]
strict = true
implicit_reexport = true
warn_unused_ignores = false
untyped_calls_exclude = ["skimage"]
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "cv2",
    "jdcal",
    "deepdiff",
    "psutil",
    "skyfield.*",
    "fabric.*",
    "brukeropus",
    "brukeropus.*",
    "skimage.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
filterwarnings = [
    'ignore:the imp module is deprecated in favour of importlib:DeprecationWarning',
    'ignore:pkg_resources is deprecated as an API:DeprecationWarning',
    'ignore:getargs:DeprecationWarning',
]
markers = [
    "ci: can be run in a CI environment",
    "integration: can only be run on a configured system",
]

[tool.pdm.options]
add = ["--no-self"]
install = ["--no-self"]
remove = ["--no-self"]

[tool.pdm]
distribution = false

[tool.setuptools]
packages = []

[tool.pyright]
exclude = [".venv", "packages/ui", "packages/docs", "hidden"]
strict = ["packages", "tests", "run_pyra_core.py"]
